
- pip or pip3 install dearpygui --upgrade
- Read the `Breaking Changes` section (here in the changelog).
- Please report any issue!

------------------------------------------------------------------------
 VERSION 0.7.x
------------------------------------------------------------------------

Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.7.x

Breaking Changes:
- removed command: decref_value
- removed command: incref_value
- removed command: add_value
- removed command: add_data
- removed command: delete_data
- removed command: get_data
- removed command: set_render_callback
- removed command: start_dearpygui
- removed command: add_next_column
- removed command: add_column
- removed command: add_columns
- removed command: add_managed_columns
- removed command: managed_columns
- removed command: add_row
- removed command: clear_table
- removed command: delete_column
- removed command: delete_row
- removed command: set_managed_column_width
- removed command: get_managed_column_width
- removed command: set_table_data
- removed command: get_table_data
- removed command: get_table_item
- removed command: set_table_item
- removed command: get_table_selections
- removed command: set_table_selection
- removed command: insert_column
- removed command: insert_row
- removed command: set_headers
- removed command: add_additional_font
- removed command: add_character_remap
- removed command: get_main_window_size
- removed command: get_main_window_size
- removed command: set_main_window_size
- removed command: set_main_window_pos
- removed command: get_main_window_pos
- removed command: set_main_window_resizable
- removed command: set_main_window_title

New Keywords:
- add_window: Added "min_size" keyword #700
- add_window: Added "max_size" keyword #700
- add_selectable: Added "width" keyword
- add_selectable: Added "height" keyword
- add_node_attribute: Added "shape" keyword #713

New Commands:
- table
- add_table_column
- clear_data_grid